--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
                 </div>
             </input-group>
             <div class="formBottom">
-                <button class="submitBtn" name="login">Login <i class="fa-slab fa-regular fa-arrow-right-to-bracket"></i></button>
+                <button class="loginBtn" name="login">Login <i class="fa-slab fa-regular fa-arrow-right-to-bracket"></i></button>
                 <p class="forgotPassword"><a href="/forgot-password">Forgot Password?</a></p>
             </div>
         </form>        
