--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -15,9 +15,14 @@ ul{
 }
 h1,h2,h3,h4,h5,h6{
 	color: #23D962;
+	font-weight:400
+}
+h1{
+	font-size:65px;	
 }
 p{
 	color:#fff;
+	font-size:16px;
 }
 body{
   background:#030c15;
@@ -59,17 +64,21 @@ input{
 	display:flex;
 	justify-content: center;
 	width: 100%;
-	border-bottom:1px solid #fff;
+	border:1px solid #23D962;
 }
 .searchWrapper form{
 	width:100%;
 }
 .searchWrapper input{
-	background: none;
+	background: #030c15;
 	color:#fff;
+	margin: 0;
+	border-radius:0;
+	box-sizing: border-box;
+	border-left:1px solid#23D962
 }
 .searchWrapper button{
-	background:none;
+	background:#030c15;
 	border:none;
 	color:#fff;
 }
@@ -103,7 +112,8 @@ input{
 	display:flex;	
 	justify-content: center;
 	align-items: center;
-	font-size:16px;	
+	font-size:16px;
+	margin-top:25px;
 }
 .navLink{
 	display:flex;
@@ -136,11 +146,6 @@ input{
 	margin:0 auto;	
 	gap: 35px;
 }
-.loginForm .submitBtn {
-	background-color: #D72638; /* Crimson */
-	color: #fff;
-}
-
 .loginForm .submitBtn:hover {
 	background-color: #3FC1C9;
 	color: #1A1A1A;
@@ -160,15 +165,14 @@ input-group{
 p.formText{
 	font-size: 17px;	
 }
-.profile{
+#dashboard{
 	display:flex;
-	flex-direction: column;
 	align-items: flex-start;
 	justify-content: center;
 	margin:0 auto;
 	border-radius: 35px;
 }
-.profileHeader {
+#dashboardHeader {
 	display:flex;
 	align-items: center;
 	justify-content: space-between;
@@ -178,116 +182,126 @@ p.formText{
 	width:100%;
 	margin:0 auto;
 }
-.profileHeader, .profileStory, .profileWrapper{
-	max-width: 1000px;
+#dashboardHeader, #dashboardWrapper{
+	max-width: 1400px;
 }
-.profileHeader #profileName{
-	  font-size:55px;
+#dashboardWelcomeText{
+	display:flex;
+	flex-direction: column;
+	font-size:55px;	
 }
-.profileHeader p{
-	text-align: center;
-	padding:35px 0;
-	margin-top:0;	
+#dashboardHeader p{
+	margin-top:0;
+	font-size:26px;
 }
-.profileHeadLeft{
+#dashboardHeader small{
+	font-size:16px;
+	font-weight: 300
+}
+#dashboardHeadLeft{
 	display:flex;
 	align-items: center;	
 	gap:15px;
 }
-.profileHeadRight a{
-	display:block;
-	padding:10px 20px;
-	background:#03C8FA;
-  color:#1A1A1A;
-	border-radius: 35px;
-	font-weight:300;
-	letter-spacing: 1.2px;
-	cursor:pointer;
-}
-.btn-primary{
-	background:none;
-	border:none;
-	text-transform: uppercase;
-	padding:6px 15px;
-	color:#0D6BA6;
-}
-#viewAsGuestLink{
-	color:#03C8FA;
-}
-.btn-primary:hover{
-	background:#23D962;
-}
-.profileWrapper {
+#dashboardWrapper {
   display:flex;
 	flex-direction: column;	
   justify-content: space-between;
 	width:100%;
   margin:0 auto;
   font-size:16px;
-	background:#082640;
-	border:1px solid #17A68C;
+	/*! background:#082640; */
+	/*! border:1px solid #17A68C; */
 	padding:10px;
 	border-radius:10px
 }
-.profileSidebar{
-  display: flex;
-	justify-content: center;
+#dashboardSidebar{
+  display:flex;
+	flex-direction: column;
   line-height:1.9;
-
+	position: sticky;
+	top: 0;
+	border-top:1px solid #17A68C;
+	border-right:1px solid #17A68C;
+	border-bottom:1px solid #17A68C;
+	width:100%;
+	max-width:250px;
+	height:100vh;
+	background:#082640;
 }
-.profileSidebar div{
+#dashboardSidebar div{
 	padding:5px 20px;
 	margin-bottom:20px;
 	font-weight: 300;
 	cursor:pointer;
 }
-.profileSidebar div:hover{
+#dashboardSidebar div:hover{
 	background-color:#118C46;
 	color:#fff;
 }
-.profileSidebar div.active{
+#dashboardSidebar div.active{
 	background-color:#118C46;
 	color:#ECF0F1;
 }
-.resultsSection{  
+#resultsSection{  
   width:100%;	
 	margin:0 auto;	
 }
-.profileResults.active{
+.dashboardResults.active{
   display: flex;	
-	flex-direction: column;
-	align-items: center;
+	flex-direction: column;	
 	gap:20px;
+	max-width:1400px;
+	margin:0 auto;
 }
-.profileInnerHead{
+#resultsInnerHead{
 	text-align: center;
 }
-.profileResults{
+.dashboardResults{
   display: none;
 	padding:25px;
 }
-
-.profileStory {
-	display:flex;
-	flex-direction: column;
-	font-size:19px;
-	line-height: 1.6;
-  margin-bottom:20px;
-	width:100%;
-	margin:0 auto;
-	padding-bottom:15px;
+.dashboardResultsTop {
+  display:flex;
+	align-items: center;
+	width: 100%;	
 }
-.profileWrapper h2{
-	width:100%;
+.dashboardResults.edit{
+	align-items: flex-end;
 }
-#profileAvatar {
-  cursor:pointer;
+#dashboardWrapper h2{
+	width:100%;
 }
 #dashboardAvatar {
   max-width:100px;
   max-height: 200px;
   border-radius: 50%;  
+	cursor:pointer;
 }
+.signoutBtn, .loginBtn{
+
+}
+.btn-primary{
+	display:flex;
+	justify-content: center;
+	padding:5px 20px;
+	background:#03C8FA;
+  color:#1A1A1A;
+	border-radius: 5px;
+	font-weight:300;
+	cursor:pointer;
+	border:none;	
+	text-transform: uppercase;
+	font-size:19px;
+	width: 150px;
+}
+#viewAsGuestLink{
+	color:#03C8FA;
+}
+.btn-primary:hover{
+	background:#17A68C;
+}
+
 .deleteAccount {
   display:flex;
   align-items: center;
@@ -315,15 +329,15 @@ p.formText{
 .inputGroup {
   display:flex;
 	flex-direction: column;
-  justify-content: space-between;
+  margin-bottom:25px;
 	align-items: flex-start;
   width:100%;
-	padding:15px 20px;
-	max-width: 1050px;
 	color:#737373;
+  border-radius: 15px;
 }
 .inputGroup label{
-	font-size:23px;
+	display:flex;
+	font-size:19px;
 	font-weight:300;
 	color:#fff;
 }
@@ -332,7 +346,7 @@ p.formText{
 	align-items: flex-end;
 	gap:25px;
 	width:100%;	  
-	border-bottom:1px solid #024784;	
+	background:#072d4e;
 }
 .inputIcons label{
 	white-space: nowrap;
@@ -353,7 +367,7 @@ p.formText{
 .inputGroup textarea{
 	width: 100%;
 }
-.profileHeadRight{
+.dashboardHeadRight{
 	display: flex;
 	align-items:center;
 	gap:6px;
@@ -379,6 +393,35 @@ p.formText{
 .homeSection {
   display:flex;
   flex-direction:column;
-  align-items:center;
-  margin:65px 0;
+  align-items:center;  
+}
+.sectionWrap{
+	width:100%;
+	margin:0 auto;
+	max-width: 1200px;
+}
+
+.hamburger, #mobileNav {
+  display:none;
+}
+
+.selection {
+  display: flex;
+  flex-direction:column;
+  color:#fff;
+  margin-top:10px;
+}
+.selection .selectionGroup{
+  display: flex;
+  align-items: center;
+	width:75px;	
+}
+.selectionGroup input{
+	display:flex;
+}
+.dashboardResultsColWrap {
+  display:grid;
+  grid-template-columns: 1fr 1fr;
+	gap:35px;
+  width:100%;
 }
