--- a/templates/header.html
+++ b/templates/header.html
@@ -1,8 +1,8 @@
 <header>
-    <div id="headerWrapper">
+    <div id="headerWrap">
 
         <div id="siteLogo">
-            <a :href="homeUrl">FrontierToons</a>
+            <a href="/">FrontierToons</a>
         </div>
          <div class="searchWrapper">
             <button class="search" type="submit"><i class="fa-slab fa-regular fa-magnifying-glass"></i></button>
