--- a/templates/base.index.html
+++ b/templates/base.index.html
@@ -12,6 +12,15 @@
     <script src="/assets/js/functions/UserFunctions.js"></script>        
     <script src="/assets/js/functions/popovers.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js"></script>
+        <!-- MailerLite Universal -->
+<script>
+    (function(w,d,e,u,f,l,n){w[f]=w[f]||function(){(w[f].q=w[f].q||[])
+    .push(arguments);},l=d.createElement(e),l.async=1,l.src=u,
+    n=d.getElementsByTagName(e)[0],n.parentNode.insertBefore(l,n);})
+    (window,document,'script','https://assets.mailerlite.com/js/universal.js','ml');
+    ml('account', '1752054');
+</script>
+    <!-- End MailerLite Universal -->
 </head>
 <div id="popup" style="display:none"></div>
 <body>
